Add in-memory DB context

--- a/PushnotificationsDemo/appsettings.json
+++ b/PushnotificationsDemo/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Vapid": {
+    "Subject": "mailto:email@outlook.com",
+    "PublicKey": "",
+    "PrivateKey": ""
+  },
+  "ConnectionStrings": {
+    "Database": "Server=(localdb)\\mssqllocaldb;Database=PushDemoInMemoryDb;Trusted_Connection=True;ConnectRetryCount=0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
